<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controllers.DetailsBookingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:fontFamily = "@font/inter_bold"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/booking" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text=""/>

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text=""/>

        <TextView
            android:id="@+id/startExecutionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text=""/>

        <TextView
            android:id="@+id/endExecutionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="" />

        <TextView
            android:id="@+id/costTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="" />

        <TextView
            android:id="@+id/printingHouseView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="" />

        <TextView
            android:id="@+id/customerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="" />

        <Button
            android:id="@+id/showProductsBtn"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:text="@string/showProducts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/showEmployeesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showEmployees" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/employeesRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/firstBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/editButton" />

        <Button
            android:id="@+id/secondBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/deleteButton" />

    </LinearLayout>

</ScrollView>