<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.UpdateBookingAdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:fontFamily = "@font/inter_bold"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/chooseData"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:fontFamily = "@font/inter_bold"
            android:textSize="16dp"
            android:text="@string/printingHouse">
        </TextView>

        <Spinner
            android:id="@+id/printingHousesSpinner"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/spinner_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:fontFamily = "@font/inter_bold"
            android:gravity="center_horizontal"
            android:textSize="16dp"
            android:text="Сотрудники">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/employeesRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/chooseEndExecutionBtn"
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:text="@string/setDateExecution"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:id="@+id/endExecutionBtnHelperText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Необходимо выбрать дату выполнения"
            android:textColor="@color/design_default_color_error"
            android:textSize="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/saveButton" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>